fixed more styling. Looks good on Mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -20,16 +20,6 @@
 body {
   padding-bottom: 40px;
 }
-.example-enter {
-  opacity: 0.01;
-  background-color: aqua;
-}
-
-.example-enter.example-enter-active {
-  opacity: 1;
-  transition: 700ms;
-  background-color: black;
-}
 
 /* .pagination-buttons {
 } */
@@ -41,8 +31,7 @@ body {
 .styledButtons {
   background-color: transparent !important;
   border: none !important;
-  font-size: 18px !important;
-  /* height: 50px; */
+  font-size: 14px !important;
 }
 .styledButtons:hover {
   background-color: white !important;
